--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>mascotas.com</h1>
+  <p>esta es una pagina aun no echa</p>
+  <button></button>
   <script type="module" src="main.js"></script>
 </body>
 </html>
