--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 <body>
   <h1>mascotas.com</h1>
   <p>esta es una pagina aun no echa</p>
-  <button></button>
+  <button>Cliquea Aquí</button>
+  <h2>Seguimos probando</h2>
   <script type="module" src="main.js"></script>
 </body>
 </html>
