--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>hola mundi</h1>
   <script type="module" src="main.js"></script>
 </body>
 </html>
