--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <p>esta es una pagina aun no echa</p>
   <button>Cliquea Aquí</button>
   <h2>Seguimos probando</h2>
+  <button>mascotas en adopcion</button>
+  <p>esta en veremos el tema del proyecto</p>
   <script type="module" src="main.js"></script>
 </body>
 </html>
