--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>petworld</title>
+  <title>petWorld</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <section>
       <header>
         <img src="img/logo.png" alt="logo" height="250px">
-        <h1>INICIAR SESION</h1>
+        <h1>INICIAR SESIÓN</h1>
       </header>
       <div class="login">
         <label for="email"></label>
@@ -22,7 +22,7 @@
         <input id="password" type="password" placeholder="contraseña" required>
         <p>¿Olvidaste tu contraseña?</p>
         <button class="into">INGRESAR</button>
-        <p>o ingresa con</p>
+        <p>O ingresa con</p>
         <img src="img/facebook (2).png" alt="facebook" height="50px">
         <img src="img/google.png" alt="google" height="50px">
         <p>¿eres nuevo en petworld?</p>
@@ -30,10 +30,92 @@
       </div>
       <div class="imgMobile">
         <img src="img/fondoConlogo.jpg"alt="fondo del logo" height="250px">
-        <h2>UNETE A PETWORLD</h2>
+        <h2>ÚNETE A PETWORLD</h2>
         <p>Crea tu cuenta en pocos pasos</p>
         <button class="into">SIGUIENTE</button>
         <a id="loginBack">¿Ya tienes una cuenta?</a>
+      </div>
+      <div>
+        <img src="img/fondoConlogo.jpg"alt="fondo del logo" height="250px">
+        <h2>CREA TU CUENTA</h2>
+        <p>¡Es súper rápido y fácil!</p>
+        <label for="name"></label>
+        <input id="name" type="text" placeholder="*Nombres" required>
+        <label for="lastName"></label>
+        <input id="lastName" type="text" placeholder="*Apellidos" required>
+        <button class="into">SIGUIENTE</button>
+      </div>
+      <div>
+        <img src="img/fondoConlogo.jpg"alt="fondo del logo" height="250px">
+        <h2>CREA TU CUENTA</h2>
+        <label for="newEmail"></label>
+        <input id="newEmail" type="email" placeholder="*Correo" required>
+        <label for="newPassword"></label>
+        <input id="newPassword" type="password" placeholder="*Contraseña nueva" required>
+        <label for="repeatPassword"></label>
+        <input id="repeatPassword" type="password" placeholder="*Repite contraseña" required>
+        <button class="into">SIGUIENTE</button>
+      </div>
+      <div>
+        <img src="img/fondoConlogo.jpg"alt="fondo del logo" height="250px">
+        <p>*Fecha de nacimiento</p>
+        <label for="selectDay">Día:</label>
+        <select id="selectDay">
+          <option value="">01</option>
+          <option value="">02</option>
+          <option value="">03</option>
+          <option value="">04</option>
+          <option value="">05</option>
+          <option value="">06</option>
+          <option value="">07</option>
+          <option value="">08</option>
+          <option value="">09</option>
+          <option value="">10</option>
+          <option value="">11</option>
+          <option value="">12</option>
+          <option value="">13</option>
+          <option value="">14</option>
+          <option value="">15</option>
+          <option value="">16</option>
+          <option value="">17</option>
+          <option value="">18</option>
+          <option value="">19</option>
+          <option value="">20</option>
+          <option value="">21</option>
+          <option value="">22</option>
+          <option value="">23</option>
+          <option value="">24</option>
+          <option value="">25</option>
+          <option value="">26</option>
+          <option value="">27</option>
+          <option value="">28</option>
+          <option value="">29</option>
+          <option value="">30</option>
+          <option value="">31</option>
+        </select>
+        <label for="selectMonth">Mes:</label>
+        <select id="selectMonth">
+          <option value="">Enero</option>
+          <option value="">Febrero</option>
+          <option value="">Marzo</option>
+          <option value="">Abril</option>
+          <option value="">Mayo</option>
+          <option value="">Junio</option>
+          <option value="">Julio</option>
+          <option value="">Agosto</option>
+          <option value="">Setiembre</option>
+          <option value="">Octubre</option>
+          <option value="">Noviembre</option>
+          <option value="">Diciembre</option>
+        </select>
+        <label for="selectYear">Año:</label>
+        <select id="selectYear">
+          <input type="date">          
+        </select>
+        <a>Términos y condiciones</a>
+        <input id="checkAccept" type="checkbox" required>
+        <p>He leído y acepto todo lo anterior</p>
+        <button class="into">REGÍTRATE</button>
       </div>
     </section>
   </main>
