--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
       <img src="img/logo.png" alt="logo" height="250px">
     </header>
     <main>
-      <h1>INICIAR SESIÓN</h1>
       <div id="root">
       <!-- </div class="login">
         <label for="email"></label>
@@ -217,8 +216,8 @@
   </section>
   <script type="module">
     // Import the functions you need from the SDKs you need
-    import { initializeApp } from "firebase/app";
-    import { getAnalytics } from "firebase/analytics";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-analytics.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
 
