--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <div id="root">
       </div>
     </main>
-    <footer>Hecho por Carmen, Stefani y Cinthia para Laboratoria LIM017</footer>
+    <footer id="footerPetworld">Hecho por Carmen, Stefani y Cinthia para Laboratoria LIM017</footer>
   </section>
   <script type="module">
     // Import the functions you need from the SDKs you need
