--- a/src/index.html
+++ b/src/index.html
@@ -5,25 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=PT+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>petWorld</title>
 </head>
 
 <body>
-  <section>
+  <section class="containerViewFirst">
     <header>
       <img id="logo" src="img/logo.png" alt="logo">
     </header>
-    <main>
+    <main class="containerMain">
       <div id="root">
       </div>
-    </main>
-    <footer id="footerPetworld">Hecho por Carmen, Stefani y Cinthia para Laboratoria LIM017</footer>
+    </main> 
   </section>
+  <footer id="footerPetworld">Hecho por Carmen, Stefani y Cinthia para Laboratoria LIM017</footer>
   <script type="module">
     // Import the functions you need from the SDKs you need
-    
   </script>
   <script type="module" src="main.js"></script>
   <script type="module" src="authFirebase/authentication.js"></script>
