--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-      <div id="root">
-      </div>
+      <div id="root"></div>
   <footer id="footerPetworld">Hecho por Carmen, Stefani y Cinthia para Laboratoria LIM017</footer>
   <script type="module">
     // Import the functions you need from the SDKs you need
