--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=PT+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/a9b03500e6.js" crossorigin="anonymous"></script>
+  
+
   <title>petWorld</title>
 </head>
 
 <body>
       <div id="root"></div>
-  <footer id="footerPetworld">Hecho por Carmen, Stefani y Cinthia para Laboratoria LIM017</footer>
+  <footer id="footerPetworld">
+    <h5>Redes sociales-PETWORLD</h5>
+    <div class="socialNetwork">
+      <a href="https://www.instagram.com/teresa_cecilia_ani/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <i class="fa-regular fa-envelope"> petworld13042022@gmail.com</i>
+    </div>
+    <p>Hecho por Carmen, Stefani y Cinthia para Laboratoria LIM017</p>
+  </footer>
   <script type="module">
     // Import the functions you need from the SDKs you need
   </script>
